--- a/templates/test.html
+++ b/templates/test.html
@@ -1,1 +1,94 @@
-House list!!!!
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Home</title>
+	
+	<style>
+	p {
+		font-size: 24px;
+	}
+	font{
+		padding: 40px;
+	}
+	</style>
+  </head>
+  <body>
+    
+	
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	
+	<br>
+	<font size = "120px">Aggieland Home Compliance Checklist</font>
+	<br> <br>
+	<div>
+		<div class = "card" style = "width = 60rem;">
+			<h1 class="card-header" style = "color: white; background-color: #00D3FF">General Checklist</h1>
+			<div class="card-body">
+				<div class="checklist">
+				<div class="row">
+				<div class="col-4">
+					<div class="list-group" id="list-tab" role="tablist">
+						<a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Weed and Grass</a>
+						<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Fence Height</a>
+						<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Parking</a>
+						<a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Junked vehicle</a>
+						<a class="list-group-item list-group-item-action" id="list-home-list2" data-toggle="list" href="#list-home2" role="tab" aria-controls="home2">Illegal Signs</a>
+						<a class="list-group-item list-group-item-action" id="list-profile-list2" data-toggle="list" href="#list-profile2" role="tab" aria-controls="profile2">Property Maintenance</a>
+					</div>
+				</div>
+				<div class="col-8">
+					<div class="tab-content" id="nav-tabContent">
+					<div class="tab-pane fade active show" id="list-home" role="tabpanel" aria-labelledby="list-home-list"><p>It shall be unlawful for any person owning, claiming, occupying, or having supervision or control of any real property within the City to permit weeds, grass, brush, or any objectionable or unsightly vegetation to grow due to lack of vegetation management upon any such real property.</p></div>
+					<div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><p>Fences and walls shall be a minimum of six (6) feet in height and a maximum of eight (8) feet. Walls over six (6) feet must obtain a building permit.</p></div>
+					<div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><p>It shall be unlawful for any person or operator (other than a Police Officer or City employee acting in the course and scope of their duties) to park, stop or stand a motor vehicle: (1) in or on a yard or lawn, (2) blocking a public or private driveway or alley, a dumpster, (3) within 15 feet of a fire hydrant, (4) park facing traffic or 18 inches from the curb.</p></div>
+					<div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list"><p>Vehicle that is: 1) wrecked, dismantled, partially dismantled, or discarded, or 2) inoperable and has remained inoperable for more than 30 consecutive days in private properties are junked vehicle.</p></div>
+					<div class="tab-pane fade" id="list-home2" role="tabpanel" aria-labelledby="list-home-list2"><p>Signs that are intended to or designed to resemble traffic signs, portable and trailer signs, temporary freestanding signs, signs painted on rooftops, off-premises (including commercial and non-commercial billboards) are illegal signs. However, temporary signs erected by private property owners for the purpose of warning of a dangerous defect, condition, or other hazard to the public are exempt.</p></div>
+					<div class="tab-pane fade" id="list-profile2" role="tabpanel" aria-labelledby="list-profile-list2"><p>Important property maintenance to avoid city code violations are primarily (but not limited to): pest control, periodic change of filters (AC, water, dishwasher, etc.), smoke and CO monitors, fire extinguisher inspection, plumbing system inspection, water heater drainage, gas and electrical systems check, and property exterior inspection.</p></div>
+				</div>
+				</div>
+				</div>
+			</div>
+			</div>
+		</div>
+	</div>
+	
+	<div>
+		<div class = "card" style = "width = 60rem;">
+			<h1 class="card-header" style = "color: white; background-color: #39FF24">Personalized Checklist</h1>
+			<div class="card-body">
+				<p class="card-text">Something Something badaboom</p>
+      
+				<a href = "{% url 'posts' %}" class = "btn btn-primary">More Info</a>
+			</div>
+		</div>
+	</div>
+	
+	<div>
+		<div class = "card" style = "width = 60rem;">
+			<h1 class="card-header" style = "color: white; background-color: #FF244C">Further Information</h1>
+			<div class="card-body">
+				<p class = "card-text">Links to Other Sources of Information: </p>
+				<a href = "https://www.cstx.gov/cms/One.aspx?portalId=12410917&pageId=13471366" class = "btn btn-primary" >Frequent Violations of Code</a> &nbsp; &nbsp; &nbsp;
+				<a href = "https://www.cstx.gov/departments___city_hall/commserv/code/detailed_code_violations" class = "btn btn-primary">Detailed Code Violations</a> &nbsp; &nbsp; &nbsp;
+				<a href = "https://library.municode.com/tx/college_station/codes/code_of_ordinances?nodeId=SPAGEOR" class = "btn btn-primary">Government Documentation of Codes and Violations</a> &nbsp; &nbsp; &nbsp;
+				<a href = "https://www.cstx.gov/departments___city_hall/commserv/code/rental_registration" class = "btn btn-primary">Rental Property Owners</a>
+			</div>
+		</div>
+	</div>
+	
+	
+	
+  </body>
+</html>
