--- a/templates/test.html
+++ b/templates/test.html
@@ -68,7 +68,7 @@
 		<div class = "card" style = "width = 60rem;">
 			<h1 class="card-header" style = "color: white; background-color: #39FF24">Personalized Checklist</h1>
 			<div class="card-body">
-				<p class="card-text">Something Something badaboom</p>
+				<p class="card-text">Login to your account</p>
       
 				<a href = "{% url 'posts' %}" class = "btn btn-primary">More Info</a>
 			</div>
